Netlify Forms修正: method=POST追加とデバッグログ追加

--- a/public/__forms.html
+++ b/public/__forms.html
@@ -1,19 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Netlify Forms</title>
-</head>
-<body>
-  <!-- Netlify Forms detection form -->
-  <form name="contact" data-netlify="true" netlify-honeypot="bot-field" hidden>
-    <input type="hidden" name="form-name" value="contact" />
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <input type="text" name="purpose" />
-    <textarea name="message"></textarea>
-    <p class="hidden">
-      <label>Don't fill this out if you're human: <input name="bot-field" /></label>
-    </p>
-  </form>
-</body>
+<!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <title>Contact Form</title>
+  </head>
+  <body>
+    <form
+      name="contact"
+      method="POST"
+      data-netlify="true"
+      netlify-honeypot="bot-field"
+      hidden
+    >
+      <input type="hidden" name="form-name" value="contact" />
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="purpose" />
+      <textarea name="message"></textarea>
+      <input name="bot-field" />
+    </form>
+  </body>
 </html>
